fix extra spacing – older browsers

--- a/packages/textfield/src/mwc-textfield.scss
+++ b/packages/textfield/src/mwc-textfield.scss
@@ -38,6 +38,8 @@ limitations under the License.
 }
 
 .mdc-text-field {
+  display: flex;
+
   width: 100%;
 
   @include mdc-theme-prop(border-radius, (
